--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hier entsteht eine neue Webseite.</title>
+    <title>Hier entsteht keine neue Webseite.</title>
     <style>
         html {
             width: 100%;
